# app/openapi/model_test_case_parameter.go
@@ -1,0 +1,31 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Payload Ops API
+ *
+ * The Payload Ops API streamlines management of AI prompts, projects, organizations, teams, and users through conventional HTTP requests. This platform enables efficient automation and control of resources, providing robust tools for developers to manage settings, memberships, and activities seamlessly.
+ *
+ * API version: 1.0
+ * Contact: info@payloadops.com
+ */
+
+package openapi
+
+type TestCaseParameter struct {
+
+	// Timestamp when this test case was updated
+	Key string `json:"key,omitempty"`
+
+	// Timestamp when this test case was updated
+	Value string `json:"value,omitempty"`
+}
+
+// AssertTestCaseParameterRequired checks if the required fields are not zero-ed
+func AssertTestCaseParameterRequired(obj TestCaseParameter) error {
+	return nil
+}
+
+// AssertTestCaseParameterConstraints checks if the values respects the defined constraints
+func AssertTestCaseParameterConstraints(obj TestCaseParameter) error {
+	return nil
+}
